@@ -32,6 +32,8 @@ buildscript {
   }
 }
 
+apply(plugin = "org.jetbrains.dokka")
+
 allprojects {
   group = "com.squareup.okhttp3"
   version = "5.0.0-SNAPSHOT"
@@ -115,12 +117,9 @@ subprojects {
 
   tasks.withType<KotlinCompile> {
     kotlinOptions {
-      apiVersion = "1.4"
       jvmTarget = JavaVersion.VERSION_1_8.toString()
-
       freeCompilerArgs = listOf(
         "-Xjvm-default=all",
-        "-opt-in=kotlin.RequiresOptIn"
       )
     }
   }
@@ -140,6 +139,13 @@ subprojects {
       "-Dokhttp.platform=$platform",
       "-XX:+HeapDumpOnOutOfMemoryError"
     )
+
+    if (platform == "loom") {
+      jvmArgs = jvmArgs!! + listOf(
+        "-Djdk.tracePinnedThread=full",
+        "--enable-preview"
+      )
+    }
 
     val javaToolchains = project.extensions.getByType<JavaToolchainService>()
     javaLauncher.set(javaToolchains.launcherFor {
@@ -213,7 +219,7 @@ subprojects {
   plugins.withId("com.vanniktech.maven.publish.base") {
     val publishingExtension = extensions.getByType(PublishingExtension::class.java)
     configure<MavenPublishBaseExtension> {
-      publishToMavenCentral(SonatypeHost.S01)
+      publishToMavenCentral(SonatypeHost.S01, automaticRelease = true)
       signAllPublications()
       pom {
         name.set(project.name)
@@ -274,6 +280,13 @@ subprojects {
       ignoredPackages += "okhttp3.brotli.internal"
       ignoredPackages += "okhttp3.sse.internal"
       ignoredPackages += "okhttp3.tls.internal"
+    }
+  }
+
+  plugins.withId("org.jetbrains.kotlin.jvm") {
+    val jvmTest by tasks.creating {
+      description = "Get 'gradlew jvmTest' to run the tests of JVM-only modules"
+      dependsOn("test")
     }
   }
 }
